5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1575_994.log
== TEST (2019-03-12 21:43:14) 
-- CODE:
print(Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:43:27) 
-- CODE:
print((Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print((Universidade Federal do Amazonas)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:43:34) 
-- CODE:
print((Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print((Universidade Federal do Amazonas)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:43:37) 
-- CODE:
print((Universidade Federal do Amazonas)
-- EXECUTION TIME:
0.147907
-- ERROR:
  File "/home/codebench/codes/1575/994/main.py", line 1
    print((Universidade Federal do Amazonas)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:44:25) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:44:53) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:28) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.147561
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
